manifests/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
    # component: ingress
  annotations:
    # ingress.kubernetes.io/auth-secret: grafana-basic-auth
    # ingress.kubernetes.io/auth-type: basic
    # kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: grafana.things.local
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
  # tls:
  # - secretName: grafana-tls
  #   hosts:
  #   - grafana.kube.codeformuenster.org
